# boostest

./: .gitignore  Cargo.toml  LICENSE.md  README-ja.md  README.md  TODO.md  justfile  package.json  pnpm-lock.yaml  sample.json
.github/workflows/: CI.yml
apps/example/: .gitignore  boostest.setting.json  index.js  package.json  tsconfig.json
apps/example/src/: anotherClassFile.ts  anotherTypeFile.ts  anotherTypeFile2.ts  bet.ts  boostest.ts  example.ts  example1_test_data.ts  example2_test_data.ts  example3.ts  example3_test_data.ts  example4_test_data.ts  example_test_data.ts  good.ts  testFile.ts
apps/example/src/dirrr/: typetype.ts
apps/example/src/handlefiles/: boostest.ts  nestedExample.ts
apps/example/src/types/: caffe.ts  customer.ts  default_job.ts  export_default_class.ts  export_default_class_with_decl.ts  export_default_interface.ts  export_default_interface_with_decl.ts  export_default_named_decl.ts  export_named_decl.ts  export_named_decl_class.ts  job.ts  (+7 more)
apps/test/: .gitignore  boostest.setting.json  boostest.setting.json.bak  defi.json  defidefi.json  jest.config.js  memo.text  package.json  temp.json  tsconfig.json
apps/test/__tests__/: direct_path_output.spec.ts  main_file_output.spec.ts  multi_file_output.spec.ts  multi_file_output.sspec.ts  output.spec.ts
apps/test/src/: main_test.ts  main_test_test_data.ts  test.ts  test_test_data.ts
crates/boostest/: Cargo.toml
crates/boostest/src/: boostest_bundler.rs  boostest_debug.rs  boostest_generator.rs  boostest_manager.rs  boostest_mock.rs  boostest_mock_builder.rs  boostest_mock_loader.rs  boostest_resolver.rs  boostest_target.rs  boostest_utils.rs  lib.rs  new.rs
crates/boostest/src/boostest_bundler/: output.rs  output_generator.rs  output_main_generator.rs
crates/boostest/src/boostest_generator/: class_builder.rs  code_generator.rs  extends_ast_builder.rs  fallback_func_builder.rs  get_arg.rs  get_expression.rs  handle_ts_signatures.rs  test_data_factory.rs  ts_interface_builder.rs  ts_type_alias_builder.rs
crates/boostest/src/boostest_generator/template/: class.ts  default.ts  getUnionValue.ts  intersection.ts  isAssignableTo.ts  tsTypeAlias.ts  tsTypeLiteralAlias.ts
crates/boostest/src/boostest_manager/: propety_assignment.rs  target_detector.rs  task.rs
crates/boostest/src/boostest_mock/: impl_visit.rs  mock.rs  mock_ast_builder.rs  mock_builder.rs  mock_target.rs
crates/boostest/src/boostest_mock_builder/: class_builder.rs  fallback_func_builder.rs  init_value.rs  mock_builder.rs  ref_prop_builder.rs  test_data_assignment.rs  test_data_factory.rs  ts_interface_builder.rs  ts_type_alias_builder.rs
crates/boostest/src/boostest_mock_builder/template/: class.ts  classWithObj.ts  default.ts  tsInterface.ts  tsTypeAlias.ts
crates/boostest/src/boostest_mock_loader/: impl_visit.rs  impl_visit2.rs  mock.rs  mock_ast_loader.rs  mock_ast_loader2.rs  mock_loader.rs  mock_target_ast.rs  new_mock_ast_loader.rs
crates/boostest/src/boostest_resolver/: isit_mut.rs  main_target_resolver.rs  resolver.rs  target.rs  target_resolver.rs  visit_mut.rs
crates/boostest/src/boostest_resolver/resolver/: oxc_resolver.rs  tsserver_resolver.rs
crates/boostest/src/boostest_target/: infer_resolver.rs  main_target_resolver.rs  output.rs  output_generator.rs  output_main_generator.rs  target.rs  target_resolver.rs
crates/boostest/src/boostest_utils/: ast_utils.rs  buf.rs  file_utils.rs  id_name.rs  module_resolver.rs  module_resolver2.rs  napi.rs  setting.rs  task.rs  tsserver.rs  typescript_lib.rs  utils.rs
crates/boostest/src/new/: boostest_generator.rs  boostest_manager.rs  boostest_utils.rs
crates/boostest/src/new/boostest_generator/: class_builder.rs  code_generator.rs  extends_ast_builder.rs  fallback_func_builder.rs  test_data_factory.rs  ts_interface_builder.rs  ts_type_alias_builder.rs
crates/boostest/src/new/boostest_generator/template/: tsInterface.ts
crates/boostest/src/new/boostest_manager/: propety_assignment.rs  target_detector.rs  task.rs
crates/boostest/src/new/boostest_target/: target.rs  target_resolver.rs
crates/boostest/src/new/boostest_utils/: ast_utils.rs  module_resolver.rs
crates/boostest_oxc_utils/: Cargo.toml
crates/boostest_oxc_utils/src/: ast_snippet.rs  compiler.rs  lib.rs
crates/boostest_oxc_utils/src/allocator_helpers/: from_in.rs  into_in.rs
crates/boostest_oxc_utils/src/allocator_helpers/take_in/: impl_for_oxc_allocator.rs  impl_for_oxc_ast.rs  impl_for_oxc_syntax.rs  mod.rs
crates/boostest_oxc_utils/src/ext/: mod.rs
crates/boostest_oxc_utils/src/oxc_ast/: helpers.rs  mod.rs
(+195 files in other folders)
