[workspace]
members = ["crates/boostest"]

exclude = ["packages/boostest"]
resolver = "2"

[workspace.package]
edition = "2021"
homepage = "https://hoge.rs/"
license = "MIT"
repository = "https://github.com/hoge"

[workspace.lints.rust]
[workspace.lints.clippy]


[workspace.dependencies]

oxc = { version = "0.13.0", features = ["sourcemap_concurrent"] }
oxc_index = { version = "0.13.0" }
oxc_resolver = { version = "1.7.0", features = ["package_json_raw_json_api"] }

tokio = { version = "1", features = ["full"] }
clap = { version = "4.4.7", features = ["derive", "env"] }
regex = "1.10.4"
glob = "0.3.1"
colored = "2"
indicatif = "0.17.8"
rayon = "1.10"

self_cell = "1.0.4"
smallvec = "1.13.2"
anyhow = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

boostest = { version = "0.0.1", path = "./crates/boostest" }
