[workspace]
members = ["crates/boostest"]

exclude = ["packages/boostest"]
resolver = "2"

[workspace.package]
edition = "2021"
homepage = "https://hoge.rs/"
license = "MIT"
repository = "https://github.com/hoge"

[workspace.lints.rust]
[workspace.lints.clippy]


[workspace.dependencies]

oxc = { version = "0.38.0", features = ["sourcemap", "sourcemap_concurrent"] }
oxc_resolver = { version = "2.0.0", features = ["package_json_raw_json_api"] }

clap = { version = "4.4.7", features = ["derive", "env"] }
regex = "1.10.4"
globwalker = "0.9.0"
colored = "2"
rayon = "1.10.0"

self_cell = "1.0.4"
smallvec = "1.13.2"
anyhow = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ropey = "1.6.1"

boostest = { version = "0.0.1", path = "./crates/boostest" }
spinoff = "0.8.0"

sha2 = "0.10"


napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
