[package]
name = "boostest"
version = "0.1.0"

edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
repository.workspace = true


[lints]
workspace = true

[dependencies]
boostest_oxc_utils = { workspace = true }
oxc = { workspace = true, features = ["semantic", "codegen"] }

serde  = { workspace = true }
serde_json  = { workspace = true }


