[package]
name = "boostest"
version = "0.1.0"

edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true


[lints]
workspace = true

[dependencies]
oxc = { workspace = true, features = ["semantic", "codegen"] }
oxc_resolver = { workspace = true }
anyhow = { workspace = true }
glob = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
colored = { workspace = true }
indicatif = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
ropey = { workspace = true }
