[package]
name    = "boostest_oxc_utils"
version = "0.1.0"

edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
oxc = { workspace = true, features = ["semantic", "codegen"] }

self_cell = { workspace = true }
smallvec  = { workspace = true }
